service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abc-server
spec:
  type: NodePort
  selector:
    app: abc-server
  ports:
    - port: 8080
      targetPort: 8080
